<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/login_signup_bg"
        tools:context=".view.ui.auth.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/signUpBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23.6dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="61dp"
                android:layout_height="26dp"
                android:layout_marginStart="23.6dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_skip"
                android:fontFamily="@font/proxima_nova_medium"
                android:textColor="@color/colorSkipTxt"
                android:background="@drawable/button_welcome_page_skip"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62.5dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/worksans_medium"
                android:lineHeight="42sp"
                android:text="@string/txt_sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpBtnBack"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/worksans_medium"
                android:lineHeight="42sp"
                android:text="@string/txt_reg_details"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                app:layout_constraintVertical_bias="0.0" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/alreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:lineHeight="30sp"
                    android:text="@string/txt_have_an_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:fontFamily="@font/worksans_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:lineHeight="30sp"
                    android:text="@string/txt_log_in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:fontFamily="@font/worksans_medium"
                    android:layout_toEndOf="@+id/alreadyHaveAccount"
                    app:layout_constraintVertical_bias="0.0"
                    android:clickable="true"
                    android:focusable="true" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="11.5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_login_signup_bg"
                android:hint="@string/hint_name"
                android:textColorHint="@color/colorGrey"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/worksans_medium"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                android:text="" />


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_login_signup_bg"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorGrey"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/worksans_medium"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_name"
                android:text="" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_login_signup_bg"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorGrey"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/worksans_medium"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email"
                android:text="" />

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_login_signup_bg"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="@color/colorGrey"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/worksans_medium"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                android:text="" />



            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="27.4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_welcome_page_login"
                android:text="@string/btn_create_account"
                android:fontFamily="@font/worksans_medium"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
                app:layout_constraintVertical_bias="0.0" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>