<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/login_signup_bg"
        tools:context=".view.ui.auth.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23.6dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_skip"
                android:background="@drawable/button_welcome_page_skip"
                android:layout_width="61dp"
                android:layout_height="26dp"
                android:layout_marginStart="23.6dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_skip"
                android:fontFamily="@font/proxima_nova_medium"
                android:textColor="@color/colorSkipTxt"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62.5dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/worksans_medium"
                android:lineHeight="42sp"
                android:text="@string/txt_login"
                android:textColor="@color/colorWhite"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnBack"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/worksans_medium"
                android:lineHeight="42sp"
                android:text="@string/txt_login_details"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_login_signup_bg"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorGrey"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/worksans_medium"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_login_signup_bg"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorGrey"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/worksans_medium"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email" />

            <Button
                android:id="@+id/btnLogin"
                android:background="@drawable/button_welcome_page_login"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="34.6dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_continue"
                android:fontFamily="@font/worksans_medium"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                app:layout_constraintVertical_bias="0.0" />




            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="168.5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/txtNoAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:lineHeight="30sp"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:fontFamily="@font/worksans_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="43dp"
                    android:lineHeight="30sp"
                    android:text="@string/btn_sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:fontFamily="@font/worksans_medium"
                    android:layout_toEndOf="@+id/txtNoAccount"
                    app:layout_constraintVertical_bias="0.0"
                    android:clickable="true"
                    android:focusable="true" />

            </RelativeLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>